# copex

./: .copex-state 3.json  .copex-state.json  .gitignore  .squad  CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  Makefile  README.md  coverage.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml  squad-release.yml  test.yml  (+1 more)
.squad/: decisions.md  routing.md  team.md
docs/: UI_DESIGN.md  UI_OVERHAUL.md
examples/: agent_loop.py  retry_demo.py  simple.py  squad_orchestration.py  streaming.py  tools.py
src/: auth.rs  cli.rs  client.rs  config.rs  copilot_client.rs  jsonrpc.rs  main.rs  mcp.rs  plan.rs  tool_executor.rs  ui.rs
tests/: test_agent.py  test_approval.py  test_backoff.py  test_cache.py  test_campaign.py  test_checkpoint.py  test_circuit_breaker.py  test_cli.py  test_cli_client.py  test_cli_error_handling.py  test_cli_fleet.py  test_cli_js_repl.py  test_cli_model_routing.py  test_cli_reasoning_validation.py  test_cli_task_routing.py  test_client.py  test_client_streaming.py  test_conditions.py  test_config.py  test_context.py  test_edits.py  test_exceptions.py  test_fleet.py  test_fleet_advanced.py  test_fleet_store.py  test_git_finalize.py  test_interactive.py  test_js_repl.py  test_json_utils.py  test_log_render.py  test_mcp.py  test_mcp_integration.py  test_mcp_squad.py  test_memory.py  test_metrics_singleton.py  test_model_router.py  test_models.py  test_pdf_analyze.py  test_persistence.py  test_persistent_server.py  (+24 more)
tmp_checkpoints2/: loop-1_20260201_015836.json  loop-2_20260201_015836.json
(+140 files in other folders)
