[package]
name = "copex"
version = "1.0.0"
edition = "2024"
description = "Copilot Extended - AI assistant CLI with chat, plan, and ralph modes"
authors = ["Arthur Ramos <arthur742ramos@gmail.com>"]
license = "MIT"
repository = "https://github.com/Arthur742Ramos/copex"
homepage = "https://github.com/Arthur742Ramos/copex"
readme = "README.md"
keywords = ["copilot", "ai", "cli", "llm", "assistant"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
crossterm = "0.28"
ratatui = "0.29"
indicatif = "0.17"
console = "0.15"
syntect = "5"
ctrlc = "3"
dirs = "5"
toml = "0.8"
async-stream = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest-eventsource = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
rustyline = "17.0.2"
atty = "0.2.14"
which = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

